src/simple_python/generated/SimplePythonParser.py
# Generated from grammar/SimplePythonParser.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SimplePythonParser ( Parser ):

    grammarFileName = "SimplePythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'bool'", "<INVALID>", "'void'", 
                     "'struct'", "'return'", "'if'", "'else'", "'while'", 
                     "'printf'", "'true'", "'false'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<='", "'>='", "'<'", "'>'", "'='", "'!'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "','", "';'", "'.'", 
                     "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "INT", "BOOL", "CHAR_PTR", "VOID", "STRUCT", 
                      "RETURN", "IF", "ELSE", "WHILE", "PRINTF", "TRUE", 
                      "FALSE", "AND", "OR", "EQ", "NE", "LE", "GE", "LT", 
                      "GT", "ASSIGN", "NOT", "PLUS", "MINUS", "STAR", "SLASH", 
                      "PERCENT", "COMMA", "SEMICOLON", "DOT", "OPEN_PAREN", 
                      "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", "NAME", 
                      "NUMBER", "STRING", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_statement = 2
    RULE_variableDeclaration = 3
    RULE_assignment = 4
    RULE_printfStatement = 5
    RULE_returnStatement = 6
    RULE_expressionStatement = 7
    RULE_ifStatement = 8
    RULE_whileStatement = 9
    RULE_functionDefinition = 10
    RULE_functionReturnType = 11
    RULE_typeSpecifier = 12
    RULE_structDefinition = 13
    RULE_structFieldDeclaration = 14
    RULE_parameterList = 15
    RULE_parameter = 16
    RULE_argumentList = 17
    RULE_block = 18
    RULE_expression = 19
    RULE_orExpression = 20
    RULE_andExpression = 21
    RULE_notExpression = 22
    RULE_comparison = 23
    RULE_additiveExpression = 24
    RULE_multiplicativeExpression = 25
    RULE_unaryExpression = 26
    RULE_primary = 27
    RULE_functionCall = 28
    RULE_fieldAccess = 29
    RULE_assignmentTarget = 30
    RULE_literal = 31

    ruleNames =  [ "program", "declaration", "statement", "variableDeclaration", 
                   "assignment", "printfStatement", "returnStatement", "expressionStatement", 
                   "ifStatement", "whileStatement", "functionDefinition", 
                   "functionReturnType", "typeSpecifier", "structDefinition", 
                   "structFieldDeclaration", "parameterList", "parameter", 
                   "argumentList", "block", "expression", "orExpression", 
                   "andExpression", "notExpression", "comparison", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "primary", 
                   "functionCall", "fieldAccess", "assignmentTarget", "literal" ]

    EOF = Token.EOF
    INT=1
    BOOL=2
    CHAR_PTR=3
    VOID=4
    STRUCT=5
    RETURN=6
    IF=7
    ELSE=8
    WHILE=9
    PRINTF=10
    TRUE=11
    FALSE=12
    AND=13
    OR=14
    EQ=15
    NE=16
    LE=17
    GE=18
    LT=19
    GT=20
    ASSIGN=21
    NOT=22
    PLUS=23
    MINUS=24
    STAR=25
    SLASH=26
    PERCENT=27
    COMMA=28
    SEMICOLON=29
    DOT=30
    OPEN_PAREN=31
    CLOSE_PAREN=32
    OPEN_BRACE=33
    CLOSE_BRACE=34
    NAME=35
    NUMBER=36
    STRING=37
    LINE_COMMENT=38
    BLOCK_COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimplePythonParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePythonParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SimplePythonParser.DeclarationContext,i)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimplePythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimplePythonParser.INT) | (1 << SimplePythonParser.BOOL) | (1 << SimplePythonParser.CHAR_PTR) | (1 << SimplePythonParser.VOID) | (1 << SimplePythonParser.STRUCT) | (1 << SimplePythonParser.RETURN) | (1 << SimplePythonParser.IF) | (1 << SimplePythonParser.WHILE) | (1 << SimplePythonParser.PRINTF) | (1 << SimplePythonParser.TRUE) | (1 << SimplePythonParser.FALSE) | (1 << SimplePythonParser.NOT) | (1 << SimplePythonParser.MINUS) | (1 << SimplePythonParser.OPEN_PAREN) | (1 << SimplePythonParser.OPEN_BRACE) | (1 << SimplePythonParser.NAME) | (1 << SimplePythonParser.NUMBER) | (1 << SimplePythonParser.STRING))) != 0):
                self.state = 64
                self.declaration()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(SimplePythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDefinition(self):
            return self.getTypedRuleContext(SimplePythonParser.StructDefinitionContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(SimplePythonParser.FunctionDefinitionContext,0)


        def statement(self):
            return self.getTypedRuleContext(SimplePythonParser.StatementContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = SimplePythonParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.structDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.functionDefinition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(SimplePythonParser.VariableDeclarationContext,0)


        def SEMICOLON(self):
            return self.getToken(SimplePythonParser.SEMICOLON, 0)

        def assignment(self):
            return self.getTypedRuleContext(SimplePythonParser.AssignmentContext,0)


        def printfStatement(self):
            return self.getTypedRuleContext(SimplePythonParser.PrintfStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SimplePythonParser.ReturnStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(SimplePythonParser.ExpressionStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SimplePythonParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SimplePythonParser.WhileStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(SimplePythonParser.BlockContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SimplePythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.variableDeclaration()
                self.state = 78
                self.match(SimplePythonParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.assignment()
                self.state = 81
                self.match(SimplePythonParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.printfStatement()
                self.state = 84
                self.match(SimplePythonParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.returnStatement()
                self.state = 87
                self.match(SimplePythonParser.SEMICOLON)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.expressionStatement()
                self.state = 90
                self.match(SimplePythonParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.ifStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 93
                self.whileStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(SimplePythonParser.TypeSpecifierContext,0)


        def NAME(self):
            return self.getToken(SimplePythonParser.NAME, 0)

        def ASSIGN(self):
            return self.getToken(SimplePythonParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimplePythonParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = SimplePythonParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.typeSpecifier()
            self.state = 98
            self.match(SimplePythonParser.NAME)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePythonParser.ASSIGN:
                self.state = 99
                self.match(SimplePythonParser.ASSIGN)
                self.state = 100
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentTarget(self):
            return self.getTypedRuleContext(SimplePythonParser.AssignmentTargetContext,0)


        def ASSIGN(self):
            return self.getToken(SimplePythonParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimplePythonParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SimplePythonParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.assignmentTarget()
            self.state = 104
            self.match(SimplePythonParser.ASSIGN)
            self.state = 105
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINTF(self):
            return self.getToken(SimplePythonParser.PRINTF, 0)

        def OPEN_PAREN(self):
            return self.getToken(SimplePythonParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(SimplePythonParser.CLOSE_PAREN, 0)

        def argumentList(self):
            return self.getTypedRuleContext(SimplePythonParser.ArgumentListContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_printfStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintfStatement" ):
                return visitor.visitPrintfStatement(self)
            else:
                return visitor.visitChildren(self)




    def printfStatement(self):

        localctx = SimplePythonParser.PrintfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_printfStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(SimplePythonParser.PRINTF)
            self.state = 108
            self.match(SimplePythonParser.OPEN_PAREN)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimplePythonParser.TRUE) | (1 << SimplePythonParser.FALSE) | (1 << SimplePythonParser.NOT) | (1 << SimplePythonParser.MINUS) | (1 << SimplePythonParser.OPEN_PAREN) | (1 << SimplePythonParser.NAME) | (1 << SimplePythonParser.NUMBER) | (1 << SimplePythonParser.STRING))) != 0):
                self.state = 109
                self.argumentList()


            self.state = 112
            self.match(SimplePythonParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SimplePythonParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimplePythonParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_returnStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = SimplePythonParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SimplePythonParser.RETURN)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimplePythonParser.TRUE) | (1 << SimplePythonParser.FALSE) | (1 << SimplePythonParser.NOT) | (1 << SimplePythonParser.MINUS) | (1 << SimplePythonParser.OPEN_PAREN) | (1 << SimplePythonParser.NAME) | (1 << SimplePythonParser.NUMBER) | (1 << SimplePythonParser.STRING))) != 0):
                self.state = 115
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SimplePythonParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_expressionStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = SimplePythonParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SimplePythonParser.IF, 0)

        def OPEN_PAREN(self):
            return self.getToken(SimplePythonParser.OPEN_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimplePythonParser.ExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SimplePythonParser.CLOSE_PAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePythonParser.BlockContext)
            else:
                return self.getTypedRuleContext(SimplePythonParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(SimplePythonParser.ELSE, 0)

        def getRuleIndex(self):
            return SimplePythonParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = SimplePythonParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(SimplePythonParser.IF)
            self.state = 121
            self.match(SimplePythonParser.OPEN_PAREN)
            self.state = 122
            self.expression()
            self.state = 123
            self.match(SimplePythonParser.CLOSE_PAREN)
            self.state = 124
            self.block()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimplePythonParser.ELSE:
                self.state = 125
                self.match(SimplePythonParser.ELSE)
                self.state = 126
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SimplePythonParser.WHILE, 0)

        def OPEN_PAREN(self):
            return self.getToken(SimplePythonParser.OPEN_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SimplePythonParser.ExpressionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SimplePythonParser.CLOSE_PAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SimplePythonParser.BlockContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_whileStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = SimplePythonParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(SimplePythonParser.WHILE)
            self.state = 130
            self.match(SimplePythonParser.OPEN_PAREN)
            self.state = 131
            self.expression()
            self.state = 132
            self.match(SimplePythonParser.CLOSE_PAREN)
            self.state = 133
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionReturnType(self):
            return self.getTypedRuleContext(SimplePythonParser.FunctionReturnTypeContext,0)


        def NAME(self):
            return self.getToken(SimplePythonParser.NAME, 0)

        def OPEN_PAREN(self):
            return self.getToken(SimplePythonParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(SimplePythonParser.CLOSE_PAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SimplePythonParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(SimplePythonParser.ParameterListContext,0)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_functionDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = SimplePythonParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.functionReturnType()
            self.state = 136
            self.match(SimplePythonParser.NAME)
            self.state = 137
            self.match(SimplePythonParser.OPEN_PAREN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimplePythonParser.INT) | (1 << SimplePythonParser.BOOL) | (1 << SimplePythonParser.CHAR_PTR) | (1 << SimplePythonParser.STRUCT))) != 0):
                self.state = 138
                self.parameterList()


            self.state = 141
            self.match(SimplePythonParser.CLOSE_PAREN)
            self.state = 142
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(SimplePythonParser.TypeSpecifierContext,0)


        def VOID(self):
            return self.getToken(SimplePythonParser.VOID, 0)

        def getRuleIndex(self):
            return SimplePythonParser.RULE_functionReturnType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionReturnType" ):
                return visitor.visitFunctionReturnType(self)
            else:
                return visitor.visitChildren(self)




    def functionReturnType(self):

        localctx = SimplePythonParser.FunctionReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionReturnType)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimplePythonParser.INT, SimplePythonParser.BOOL, SimplePythonParser.CHAR_PTR, SimplePythonParser.STRUCT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.typeSpecifier()
                pass
            elif token in [SimplePythonParser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(SimplePythonParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SimplePythonParser.INT, 0)

        def BOOL(self):
            return self.getToken(SimplePythonParser.BOOL, 0)

        def CHAR_PTR(self):
            return self.getToken(SimplePythonParser.CHAR_PTR, 0)

        def STRUCT(self):
            return self.getToken(SimplePythonParser.STRUCT, 0)

        def NAME(self):
            return self.getToken(SimplePythonParser.NAME, 0)

        def getRuleIndex(self):
            return SimplePythonParser.RULE_typeSpecifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = SimplePythonParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_typeSpecifier)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimplePythonParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(SimplePythonParser.INT)
                pass
            elif token in [SimplePythonParser.BOOL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(SimplePythonParser.BOOL)
                pass
            elif token in [SimplePythonParser.CHAR_PTR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.match(SimplePythonParser.CHAR_PTR)
                pass
            elif token in [SimplePythonParser.STRUCT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 151
                self.match(SimplePythonParser.STRUCT)
                self.state = 152
                self.match(SimplePythonParser.NAME)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(SimplePythonParser.STRUCT, 0)

        def NAME(self):
            return self.getToken(SimplePythonParser.NAME, 0)

        def OPEN_BRACE(self):
            return self.getToken(SimplePythonParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(SimplePythonParser.CLOSE_BRACE, 0)

        def SEMICOLON(self):
            return self.getToken(SimplePythonParser.SEMICOLON, 0)

        def structFieldDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimplePythonParser.StructFieldDeclarationContext)
            else:
                return self.getTypedRuleContext(SimplePythonParser.StructFieldDeclarationContext,i)


        def getRuleIndex(self):
            return SimplePythonParser.RULE_structDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDefinition" ):
                return visitor.visitStructDefinition(self)
            else:
                return visitor.visitChildren(self)




    def structDefinition(self):

        localctx = SimplePythonParser.StructDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_structDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(SimplePythonParser.STRUCT)
            self.state = 156
            self.match(SimplePythonParser.NAME)
            self.state = 157
            self.match(SimplePythonParser.OPEN_BRACE)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimplePythonParser.INT) | (1 << SimplePythonParser.BOOL) | (1 << SimplePythonParser.CHAR_PTR) | (1 << SimplePythonParser.STRUCT))) != 0):
                self.state = 158
                self.structFieldDeclaration()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 164
            self.match(SimplePythonParser.CLOSE_BRACE)
            self.state = 165
            self.match(SimplePythonParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'
